force-app/main/default/objects/sugati__Room_Allocation__c/sugati__Room_Allocation__c.object-meta.xml
<CustomObject>
    <label>Room Allocation</label>
    <nameField>
        <displayFormat>RAL-{0000000000}</displayFormat>
        <label>Room Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>