force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Room Allocations (Booking)</relationshipLabel>
    <relationshipName>Room_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>