force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Gender__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>