force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipLabel>Room Allocations (Group Member)</relationshipLabel>
    <relationshipName>Room_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>