force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Group_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Group_Member_Name__c</fullName>
    <formula>sugati__RAL_Group_Member__r.sugati__GM_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Member Name</label>
    <type>Text</type>
</CustomField>