force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Release_Date__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>