force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Room__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Room__c</fullName>
    <label>Room</label>
    <referenceTo>sugati__Room__c</referenceTo>
    <relationshipLabel>Room Allocations</relationshipLabel>
    <relationshipName>Room_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>