force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Room_Shareable__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Room_Shareable__c</fullName>
    <formula>sugati__RAL_Room__r.sugati__R_Shareable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Shareable</label>
    <type>Checkbox</type>
</CustomField>