force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Room_Type__c</fullName>
    <formula>sugati__RAL_Room__r.sugati__R_Room_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Type</label>
    <type>Text</type>
</CustomField>