force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Shareable__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Shareable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shareable ?</label>
    <type>Checkbox</type>
</CustomField>