force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Single_Supplement__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Single_Supplement__c</fullName>
    <formula>sugati__RAL_Group_Member__r.sugati__S_GM_Single_Supplement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single Supplement?</label>
    <type>Checkbox</type>
</CustomField>