force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Sleep_Max__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Sleep_Max__c</fullName>
    <label>Sleep Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>