force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Spaces_Left__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Spaces_Left__c</fullName>
    <label>Space(s) Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>