force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Unusable</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>