force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Supplier_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Room Allocations</relationshipLabel>
    <relationshipName>Room_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>