force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Supplier_Id__c</fullName>
    <formula>CASESAFEID(sugati__RAL_Room__r.sugati__R_Room_Type__r.sugati__RT_Supplier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Id</label>
    <type>Text</type>
</CustomField>