force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__RAL_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAL_Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relating to this specific tour</description>
    <label>Tour</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Room Allocations (Tour)</relationshipLabel>
    <relationshipName>Room_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>