force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__S_RAL_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RAL_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Room Allocations</relationshipLabel>
    <relationshipName>Room_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>