force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__S_RAL_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RAL_Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>