force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__S_RAL_Reserved_Until__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RAL_Reserved_Until__c</fullName>
    <label>Reserved Until</label>
    <type>DateTime</type>
</CustomField>