force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__S_RAL_Room_Configuration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RAL_Room_Configuration__c</fullName>
    <label>Room Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Room_Configurations</valueSetName>
    </valueSet>
</CustomField>