force-app/main/default/objects/sugati__Room_Allocation__c/fields/sugati__S_RAL_Room_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RAL_Room_Type_Name__c</fullName>
    <formula>sugati__RAL_Room__r.sugati__R_Room_Type__r.sugati__RT_Name__c</formula>
    <label>Room Type Name</label>
    <type>Text</type>
</CustomField>